--- a/.hadolint.yaml
+++ b/.hadolint.yaml
@@ -1,5 +1,2 @@
 ignored:
-  - DL3008 # Pin versions in apt get install. Instead of `apt-get install <package>` use `apt-get install <package>=<version>`
-  # - DL3015 # Avoid additional packages by specifying `--no-install-recommends`
-  # - DL3016 # Pin versions in npm. Instead of `npm install <package>` use `npm install <package>@<version>`
-  # - DL3059 # Multiple consecutive `RUN` instructions. Consider consolidation.
+  - DL3018 # Pin versions in apk add. Instead of `apk add <package>` use `apk add <package>=<version>`
