--- a/kind/istio/virtualservice.yaml
+++ b/kind/istio/virtualservice.yaml
@@ -3,7 +3,7 @@
 apiVersion: networking.istio.io/v1
 kind: VirtualService
 metadata:
-  name: service-not-found
+  name: default
   namespace: istio-system
 spec:
   gateways:
