--- a/kind/minio/kustomization.yaml
+++ b/kind/minio/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: minio
 resources:
+  - persistentvolume.yaml
   - virtualservice-minio.yaml
   - virtualservice-minio-console.yaml
